fixed footer to stay centered, even on smaller viewports; fixed images so that clicking anywhere opens description

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -2,4 +2,7 @@
     clear: both;
     padding-top: 30px; 
     padding-bottom: 30px; 
-    text-align: center}
+    text-align: center;
+    width: 25%;
+    margin: auto;
+}
